[gd_scene load_steps=12 format=3 uid="uid://broobw420njr3"]

[ext_resource type="Script" path="res://Scripts/Life_jellybee.gd" id="1_oac7o"]
[ext_resource type="Texture2D" uid="uid://bftar3bq74hv4" path="res://Art/jellybee.png" id="2_hurvh"]
[ext_resource type="Texture2D" uid="uid://bjk4mjasegccq" path="res://Art/jellybee_dead.png" id="3_r77nf"]
[ext_resource type="Script" path="res://Scripts/Finite State Machine/brainy.gd" id="4_0u1jm"]
[ext_resource type="Script" path="res://Scripts/Finite State Machine/idle.gd" id="5_m5pe2"]
[ext_resource type="Script" path="res://Scripts/Finite State Machine/jelly_idle.gd" id="5_xrx0x"]
[ext_resource type="Script" path="res://Scripts/Finite State Machine/getcloser.gd" id="6_uo74p"]
[ext_resource type="Script" path="res://Scripts/Finite State Machine/avoid.gd" id="7_226af"]
[ext_resource type="Texture2D" uid="uid://bb3i85tiy02hb" path="res://Art/jelly_hive.png" id="9_xs6lx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld3jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5i7"]
size = Vector2(32, 32)

[node name="jellybee" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
input_pickable = true
script = ExtResource("1_oac7o")

[node name="Timer" type="Timer" parent="."]

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
visible = false
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="Vision_close" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision_close"]
visible = false
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("2_hurvh")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_r77nf")
centered = false
offset = Vector2(0, -32)

[node name="Collision_0" type="CollisionShape2D" parent="."]
position = Vector2(16, -49)
shape = SubResource("RectangleShape2D_dv5i7")
disabled = true

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 64.0

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="Brainy" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_0u1jm")
initial_state = NodePath("idle_state")

[node name="idle_state" type="Node" parent="Brainy"]
script = ExtResource("5_xrx0x")
nest_distance = 150.0

[node name="swarm_state" type="Node" parent="Brainy"]
script = ExtResource("5_m5pe2")
nest_distance = 200.0

[node name="getcloser_state" type="Node" parent="Brainy"]
script = ExtResource("6_uo74p")

[node name="avoid_state" type="Node" parent="Brainy"]
script = ExtResource("7_226af")

[node name="Nest_sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_xs6lx")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="body_entered" from="Vision_close" to="." method="_on_vision_close_body_entered"]
[connection signal="body_exited" from="Vision_close" to="." method="_on_vision_close_body_exited"]
